--- a/views/post/index.ejs
+++ b/views/post/index.ejs
@@ -1,45 +1,53 @@
 <%- include('../includes/header'); %>
-  <div class="container">
-    <h1>All Post</h1>
-    <a href="/post/create">
-      <button class="btn btn-primary">
-        Create Post
-      </button>
-    </a>
+<div class="container">
+  <h1>All Post</h1>
+  <a href="/post/create">
+    <button class="btn btn-primary">
+      Create Post
+    </button>
+  </a>
 
-    <table class="table">
-      <thead>
-        <tr>
-          <th>#</th>
-          <th>Title</th>
-          <th>Content</th>
-          <th>Action</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% posts.forEach(post => { %>
-          <tr>
-            <td><%= post.id %></td>
-            <td><%= post.title %></td>
-            <td><%= post.content %></td>
-            <td>
-              <a href="/posts/<%= post.id %>/edit">
-                <button class="btn btn-primary">
-                  Edit
-                </button>
-              </a>
-              <a href="/posts/<%= post.id %>/delete">
-                <button class="btn btn-danger">
-                  Delete
-                </button>
-              </a>
-            </td>
-          </tr>
-        <% }); %>
-      </tbody>
- </table>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>Title</th>
+        <th>Content</th>
+        <th>Action</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% posts.forEach(post => { %>
+      <tr>
+        <td><%= post.id %></td>
+        <td><%= post.title %></td>
+        <td><%= post.content %></td>
+        <td>
+          <a href="/posts/<%= post.id %>/edit">
+            <button class="btn btn-primary">
+              Edit
+            </button>
+          </a>
+          <!-- <a href="/posts/<%= post.id %>/delete" onclick="hapus(<%= post.id %>)"> -->
+          <button onclick="hapus(<%= post.id %>)" class="btn btn-danger" >
+              Delete
+            </button>
 
-   
-  </div>
+          <!-- Sweet alert -->
+          <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+          <script type="text/javascript">
+            function hapus(id) {
+              swal("Deleted!", "Your file has been deleted.", "success");
+            }
+          </script>
+          </a>
+        </td>
+      </tr>
+      <% }); %>
+    </tbody>
+  </table>
 
-  <%- include('../includes/footer'); %>
+
+</div>
+
+<%- include('../includes/footer'); %>
