change lang to eng

--- a/views/post/index.ejs
+++ b/views/post/index.ejs
@@ -38,8 +38,8 @@
             function hapus(id) {
               console.log(id)
               swal({
-                  title: "Apakah anda yakin?",
-                  text: "Sekali terhapus, data tidak dapat dikembalikan!",
+                  title: "Are you sure?",
+                  text: "Once deleted, you will not be able to recover this data!",
                   icon: "warning",
                   buttons: true,
                   dangerMode: true,
