--- a/views/post/index.ejs
+++ b/views/post/index.ejs
@@ -23,7 +23,7 @@
         <td><%= post.title %></td>
         <td><%= post.content %></td>
         <td>
-          <a href="/posts/<%= post.id %>/edit">
+          <a href="/post/<%= post.id %>/edit">
             <button class="btn btn-primary">
               Edit
             </button>
